Reset de contraseña, permisos, errores y cambios en schemas

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -5,6 +5,9 @@
     <p>E-mail: {{user.email}}</p>
     <p>Edad: {{user.age}}</p>
     <p>Rol: {{user.role}}</p>
+
+    <p><a href='/restore'>Cambiar contraseña</a></p>
 </div>
+
 
 <script src='js/logout.js'></script>
