--- a/src/views/restore.handlebars
+++ b/src/views/restore.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1>Restaura la contraseña del usuario</h1>
+	<h2>Restaura la contraseña del usuario</h2>
 
 	<form id='restoreForm'>
 		<label>Correo electrónico</label>
@@ -11,4 +11,4 @@
 
 </div>
 
-<script src="js/restore.js"></script>
+<script src="js/restorePassword.js"></script>
