--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -13,7 +13,7 @@
 		<a href='/api/sessions/github'><button>Inicia sesión con Github</button></a>
 	</div>
 	<p>¿No estás registrado? <a href='/register'>Regístrate aquí</a></p>
-	<p><a href='/restore'>¿Olvidó su contraseña?</a></p>
+	<p><a href='/forgot-password'>¿Olvidó su contraseña?</a></p>
 </div>
 
 <script src='js/login.js'></script>
