--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,16 @@
-<div class="container">
-	<h1>Login</h1>
+<div class='container'>
+	{{#if success}}
+		<div class='success'>
+			<p>La contraseña ha sido restaurada con éxito. Por favor, vuelva a iniciar sesión.</p>
+		</div>
+	{{/if}}
+	{{#if emailsend}}
+		<div class='email-send'>
+			<p>Se ha enviado a su email el link de restauración de contraseña.</p>
+		</div>
+	{{/if}}
+
+	<h2>Login</h2>
 	<form id='loginForm'>
 		<label>Email</label>
 		<input name='email' />
@@ -14,6 +25,6 @@
 	</div>
 	<p>¿No estás registrado? <a href='/register'>Regístrate aquí</a></p>
 	<p><a href='/forgot-password'>¿Olvidó su contraseña?</a></p>
-</div>
+</>
 
 <script src='js/login.js'></script>
