--- a/src/views/resetPassword.handlebars
+++ b/src/views/resetPassword.handlebars
@@ -1,22 +1,16 @@
 <div class='container'>
 	<h2>Restaurar contraseña</h2>
-	{{#if success}}
-		<div class='success'>
-			<p>La contraseña ha sido restaurada con éxito</p>
+	{{#if error}}
+		<div class='error'>
+			<p>Contraseña inválida, por favor intente nuevamente</p>
 		</div>
-	{{else}}
-		{{#if error}}
-			<div class='error'>
-				<p>Contraseña inválida, por favor intente nuevamente</p>
-			</div>
-		{{/if}}
-		<p>Ingrese su nueva contraseña</p>
-		<form id='resetForm'>
-			<label>Nueva contraseña</label>
-			<input type='password' name='password' />
-			<button type='submit'>Cambiar contraseña</button>
-		</form>
 	{{/if}}
+	<p>Ingrese su nueva contraseña</p>
+	<form id='resetForm'>
+		<label>Nueva contraseña</label>
+		<input type='password' name='password' />
+		<button type='submit'>Cambiar contraseña</button>
+	</form>
 </div>
 
-<script src='js/resetPassword.js'></script>
+<script src='/js/resetPassword.js'></script>
